# JDO

./: .gitignore  CHANGELOG.md  README.md
Cumulus_Assistant/: AGENTS.md  README.md  sfdx-project.json
Cumulus_Products/: AGENTS.md  CHANGELOG.md  README.md
Customer_Documents/: AGENTS.md  CHANGELOG.md  README.md
Customer_Hydration/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  artifacts.md  hydrate.py  requirements.txt  sfdx-project.json
DC_AgentForce_Markdown_Renderer/: .forceignore  AGENTS.md  README.md  package-lock.json  package.json  sfdx-project.json
DC_AgentForce_Output_LWC/: AGENTS.md  README.md  artifacts.md  package-lock.json  (+2 more)
Snowflake_BoardEx_ExecIntel/: AGENTS.md  README.md  pyproject.toml
Snowflake_BoardEx_ExecIntel/procedures/: sp_backfill_boardex_exec_intel.py  sp_create_procedure.sql  sp_generate_boardex_exec_intel.py
Snowflake_BoardEx_ExecIntel/schemas/: boardex_exec_intel.sql
Snowflake_BoardEx_ExecIntel/scripts/: deploy_sp.py
Snowflake_BoardEx_ExecIntel/tasks/: task_monthly_boardex_exec_intel.sql
Snowflake_BoardEx_ExecIntel/tests/: conftest.py  test_boardex_exec_intel_row_factory.py
Snowflake_BoardEx_ExecIntel/tests/integration/: test_boardex_exec_intel_sp.sql
Snowflake_Claritas_Demographics/: AGENTS.md  README.md  pyproject.toml
Snowflake_Claritas_Demographics/docs/: dc-setup-recipe.md
Snowflake_Claritas_Demographics/output/: l3-smoke.md
Snowflake_Claritas_Demographics/procedures/: sp_create_procedure.sql  sp_generate_claritas_demographics.py
Snowflake_Claritas_Demographics/schemas/: claritas_demographics.sql
Snowflake_Claritas_Demographics/scripts/: deploy_sp.py
Snowflake_Claritas_Demographics/tasks/: task_monthly_claritas_demographics.sql
Snowflake_Claritas_Demographics/tests/: conftest.py  test_claritas_demographics_row_factory.py
Snowflake_Claritas_Demographics/tests/integration/: test_claritas_demographics_sp.sql
Snowflake_CoreLogic_Property/: .gitignore  AGENTS.md  README.md  pyproject.toml
Snowflake_CoreLogic_Property/output/: l3-smoke.md
Snowflake_CoreLogic_Property/procedures/: sp_create_procedure.sql  sp_generate_corelogic_property.py
Snowflake_CoreLogic_Property/schemas/: corelogic_property.sql
Snowflake_CoreLogic_Property/scripts/: deploy_sp.py
Snowflake_CoreLogic_Property/tasks/: task_quarterly_corelogic_property.sql
Snowflake_CoreLogic_Property/tests/: conftest.py  test_corelogic_property_row_factory.py
Snowflake_CoreLogic_Property/tests/integration/: test_corelogic_property_sp.sql
Snowflake_Cumulus_Common/: AGENTS.md  README.md  pyproject.toml
Snowflake_Cumulus_Common/cumulus_common/: __init__.py  coverage.py  seed.py
Snowflake_Cumulus_Common/docs/: ROLLOUT.md
Snowflake_Cumulus_Common/output/: plan-0-anchor-probe.json
Snowflake_Cumulus_Common/schemas/: v_account_anchors.sql
Snowflake_Cumulus_Common/shares/: cumulus_synth_share.sql
Snowflake_Cumulus_Common/tests/: conftest.py  test_coverage.py  test_sample_anchors.py  test_seed.py
Snowflake_Cumulus_Common/tests/fixtures/: sample_anchors.py
Snowflake_DnB_BusinessCredit/: AGENTS.md  README.md  pyproject.toml
Snowflake_DnB_BusinessCredit/output/: l3-smoke.md
Snowflake_DnB_BusinessCredit/procedures/: sp_create_procedure.sql  sp_generate_dnb_business_credit.py
Snowflake_DnB_BusinessCredit/schemas/: dnb_business_credit.sql
Snowflake_DnB_BusinessCredit/scripts/: deploy_sp.py
Snowflake_DnB_BusinessCredit/tasks/: task_monthly_dnb_business_credit.sql
Snowflake_DnB_BusinessCredit/tests/: conftest.py  test_dnb_business_credit_row_factory.py
Snowflake_DnB_BusinessCredit/tests/integration/: test_dnb_business_credit_sp.sql
Snowflake_Gong_CallSentiment/: AGENTS.md  README.md  pyproject.toml
Snowflake_Gong_CallSentiment/procedures/: sp_backfill_gong_call_sentiment.py  sp_create_procedure.sql  sp_generate_gong_call_sentiment.py
Snowflake_Gong_CallSentiment/schemas/: gong_call_sentiment.sql
Snowflake_Gong_CallSentiment/scripts/: deploy_sp.py
Snowflake_Gong_CallSentiment/tasks/: task_weekly_gong_call_sentiment.sql
Snowflake_Gong_CallSentiment/tests/: conftest.py  test_gong_call_sentiment_row_factory.py
Snowflake_Gong_CallSentiment/tests/integration/: test_gong_call_sentiment_sp.sql
Snowflake_MSCI_ESG/: AGENTS.md  README.md  pyproject.toml
Snowflake_MSCI_ESG/output/: l3-smoke.md
Snowflake_MSCI_ESG/procedures/: sp_create_procedure.sql  sp_generate_msci_esg_scores.py
Snowflake_MSCI_ESG/schemas/: msci_esg_scores.sql
Snowflake_MSCI_ESG/scripts/: deploy_sp.py
Snowflake_MSCI_ESG/tasks/: task_monthly_msci_esg_scores.sql
Snowflake_MSCI_ESG/tests/: conftest.py  test_msci_esg_row_factory.py
Snowflake_MSCI_ESG/tests/integration/: test_msci_esg_sp.sql
Snowflake_Moodys_MarketContext/: AGENTS.md  README.md  pyproject.toml
Snowflake_Moodys_MarketContext/procedures/: sp_backfill_moodys_market_context.py  sp_create_procedure.sql  sp_generate_moodys_market_context.py
Snowflake_Moodys_MarketContext/schemas/: moodys_market_context.sql  moodys_market_context_v2.sql
Snowflake_Moodys_MarketContext/scripts/: deploy_sp.py
Snowflake_Moodys_MarketContext/tasks/: task_daily_moodys_market_context.sql
Snowflake_Moodys_MarketContext/tests/: conftest.py  test_moodys_market_context_row_factory.py
Snowflake_Moodys_MarketContext/tests/integration/: test_moodys_market_context_sp.sql
Snowflake_Synth_RelationshipGraph/: AGENTS.md  README.md  pyproject.toml
Snowflake_Synth_RelationshipGraph/procedures/: sp_create_procedure.sql  sp_generate_synth_relationship_graph.py
Snowflake_Synth_RelationshipGraph/schemas/: synth_relationship_graph.sql
Snowflake_Synth_RelationshipGraph/scripts/: deploy_sp.py
Snowflake_Synth_RelationshipGraph/tasks/: task_weekly_synth_relationship_graph.sql
Snowflake_Synth_RelationshipGraph/tests/: conftest.py  test_synth_relationship_graph_row_factory.py
Snowflake_Synth_RelationshipGraph/tests/integration/: test_synth_relationship_graph_sp.sql
(+1161 files in other folders)
