[project]
name = "cumulus-boardex-exec-intel"
version = "0.1.0"
description = "BoardEx / Equilar / ISS-style synthetic board director and executive intelligence dataset (Commercial Banking) for Cumulus."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "snowflake-snowpark-python>=1.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["procedures", "."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
